azureps-cmdlets-docs/ResourceManager/AzureRM.KeyVault/v3.2.1/AzureRM.KeyVault.md
---
Module Name: AzureRM.KeyVault
Module Guid: D48CF693-4125-4D2D-8790-1514F44CE325
Download Help Link: http://go.microsoft.com/fwlink/?linkid=390762
Help Version: 4.0.0.0
Locale: en-US
content_git_url: https://github.com/Visual-Studio-China/azure-powershell/blob/preview/src/ResourceManager/KeyVault/Commands.KeyVault/help/AzureRM.KeyVault.md
original_content_git_url: https://github.com/Visual-Studio-China/azure-powershell/blob/preview/src/ResourceManager/KeyVault/Commands.KeyVault/help/AzureRM.KeyVault.md
gitcommit: https://github.com/Visual-Studio-China/azure-powershell/blob/4538b663cc8716fd5078769cad8b19a21876ffc5
---

# AzureRM.KeyVault Module
## Description
This topic displays help topics for the Azure Key Vault Cmdlets.

## AzureRM.KeyVault Cmdlets
### [Add-AzureKeyVaultCertificate](Add-AzureKeyVaultCertificate.md)
Adds a certificate to a key vault.

### [Add-AzureKeyVaultCertificateContact](Add-AzureKeyVaultCertificateContact.md)
Adds a contact for certificate notifications.

### [Add-AzureKeyVaultKey](Add-AzureKeyVaultKey.md)
Creates a key in a key vault or imports a key into a key vault.

### [Add-AzureKeyVaultManagedStorageAccount](Add-AzureKeyVaultManagedStorageAccount.md)
Adds an existing storage account to a key vault for automatic management of its storage account keys.

### [Backup-AzureKeyVaultKey](Backup-AzureKeyVaultKey.md)
Backs up a key in a key vault.

### [Backup-AzureKeyVaultSecret](Backup-AzureKeyVaultSecret.md)
Backs up a secret in a key vault.

### [Get-AzureKeyVaultCertificate](Get-AzureKeyVaultCertificate.md)
Gets a certificate from a key vault.

### [Get-AzureKeyVaultCertificateContact](Get-AzureKeyVaultCertificateContact.md)
Gets contacts that are registered for certificate notifications for a key vault.

### [Get-AzureKeyVaultCertificateIssuer](Get-AzureKeyVaultCertificateIssuer.md)
Gets a certificate issuer for a key vault.

### [Get-AzureKeyVaultCertificateOperation](Get-AzureKeyVaultCertificateOperation.md)
Gets the status of a certificate operation.

### [Get-AzureKeyVaultCertificatePolicy](Get-AzureKeyVaultCertificatePolicy.md)
Gets the policy for a certificate in a key vault.

### [Get-AzureKeyVaultKey](Get-AzureKeyVaultKey.md)
Gets Key Vault keys.

### [Get-AzureKeyVaultManagedStorageAccount](Get-AzureKeyVaultManagedStorageAccount.md)
Gets Key Vault managed Azure Storage Accounts.

### [Get-AzureKeyVaultManagedStorageSasDefinition](Get-AzureKeyVaultManagedStorageSasDefinition.md)
Gets Key Vault managed Storage SAS Definitions.

### [Get-AzureKeyVaultSecret](Get-AzureKeyVaultSecret.md)
Gets the secrets in a key vault.

### [Get-AzureRmKeyVault](Get-AzureRmKeyVault.md)
Gets key vaults.

### [Import-AzureKeyVaultCertificate](Import-AzureKeyVaultCertificate.md)
Imports a certificate to a key vault.

### [New-AzureKeyVaultCertificateAdministratorDetails](New-AzureKeyVaultCertificateAdministratorDetails.md)
Creates an in-memory certificate administrator details object.

### [New-AzureKeyVaultCertificateOrganizationDetails](New-AzureKeyVaultCertificateOrganizationDetails.md)
Creates an in-memory certificate organization details object.

### [New-AzureKeyVaultCertificatePolicy](New-AzureKeyVaultCertificatePolicy.md)
Creates an in-memory certificate policy object.

### [New-AzureRmKeyVault](New-AzureRmKeyVault.md)
Creates a key vault.

### [Remove-AzureKeyVaultCertificate](Remove-AzureKeyVaultCertificate.md)
Removes a certificate from a key vault.

### [Remove-AzureKeyVaultCertificateContact](Remove-AzureKeyVaultCertificateContact.md)
Deletes a contact that is registered for certificate notifications from a key vault.

### [Remove-AzureKeyVaultCertificateIssuer](Remove-AzureKeyVaultCertificateIssuer.md)
Deletes a certificate issuer from a key vault.

### [Remove-AzureKeyVaultCertificateOperation](Remove-AzureKeyVaultCertificateOperation.md)
Deletes a certificate operation from a key vault.

### [Remove-AzureKeyVaultKey](Remove-AzureKeyVaultKey.md)
Deletes a key in a key vault.

### [Remove-AzureKeyVaultManagedStorageAccount](Remove-AzureKeyVaultManagedStorageAccount.md)
Removes a Key Vault managed Azure Storage Account and all associated SAS definitions.

### [Remove-AzureKeyVaultManagedStorageSasDefinition](Remove-AzureKeyVaultManagedStorageSasDefinition.md)
Removes a Key Vault managed Azure Storage SAS definitions.

### [Remove-AzureKeyVaultSecret](Remove-AzureKeyVaultSecret.md)
Deletes a secret in a key vault.

### [Remove-AzureRmKeyVault](Remove-AzureRmKeyVault.md)
Deletes a key vault.

### [Remove-AzureRmKeyVaultAccessPolicy](Remove-AzureRmKeyVaultAccessPolicy.md)
Removes all permissions for a user or application from a key vault.

### [Restore-AzureKeyVaultKey](Restore-AzureKeyVaultKey.md)
Creates a key in a key vault from a backed-up key.

### [Restore-AzureKeyVaultSecret](Restore-AzureKeyVaultSecret.md)
Creates a secret in a key vault from a backed-up secret.

### [Set-AzureKeyVaultCertificateAttribute](Set-AzureKeyVaultCertificateAttribute.md)
Modifies editable attributes of a certificate.

### [Set-AzureKeyVaultCertificateIssuer](Set-AzureKeyVaultCertificateIssuer.md)
Sets a certificate issuer in a key vault.

### [Set-AzureKeyVaultCertificatePolicy](Set-AzureKeyVaultCertificatePolicy.md)
Creates or updates the policy for a certificate in a key vault.

### [Set-AzureKeyVaultKeyAttribute](Set-AzureKeyVaultKeyAttribute.md)
Updates the attributes of a key in a key vault.

### [Set-AzureKeyVaultManagedStorageSasDefinition](Set-AzureKeyVaultManagedStorageSasDefinition.md)
Sets a Shared Access Signature (SAS) definition with Key Vault for a given Key Vault managed Azure Storage Account. 

### [Set-AzureKeyVaultSecret](Set-AzureKeyVaultSecret.md)
Creates or updates a secret in a key vault.

### [Set-AzureKeyVaultSecretAttribute](Set-AzureKeyVaultSecretAttribute.md)
Updates attributes of a secret in a key vault.

### [Set-AzureRmKeyVaultAccessPolicy](Set-AzureRmKeyVaultAccessPolicy.md)
Grants or modifies existing permissions for a user, application, or security group to perform operations with a key vault.

### [Stop-AzureKeyVaultCertificateOperation](Stop-AzureKeyVaultCertificateOperation.md)
Cancels a certificate operation in key vault.

### [Undo-AzureKeyVaultKeyRemoval](Undo-AzureKeyVaultKeyRemoval.md)
Recovers a deleted key in a key vault into an active state.

### [Undo-AzureKeyVaultSecretRemoval](Undo-AzureKeyVaultSecretRemoval.md)
Recovers a deleted secret in a key vault into an active state.

### [Undo-AzureRmKeyVaultRemoval](Undo-AzureRmKeyVaultRemoval.md)
Recovers a deleted key vault into an active state.

### [Update-AzureKeyVaultManagedStorageAccount](Update-AzureKeyVaultManagedStorageAccount.md)
Update editable attributes of a Key Vault managed Azure Storage Account.

### [Update-AzureKeyVaultManagedStorageAccountKey](Update-AzureKeyVaultManagedStorageAccountKey.md)
Regenerates the storage account key associated with a storage account managed by Key Vault.
